@@ -24,6 +24,7 @@ package org.opencastproject.index.service.impl;
 import static org.opencastproject.assetmanager.api.AssetManager.DEFAULT_OWNER;
 import static org.opencastproject.assetmanager.api.fn.Enrichments.enrich;
 import static org.opencastproject.metadata.dublincore.DublinCore.PROPERTY_IDENTIFIER;
+import static org.opencastproject.security.api.DefaultOrganization.DEFAULT_ORGANIZATION_ID;
 import static org.opencastproject.workflow.api.ConfiguredWorkflow.workflow;
 
 import org.opencastproject.assetmanager.api.AssetManager;
@@ -120,8 +121,6 @@ import org.opencastproject.workflow.api.WorkflowInstance.WorkflowState;
 import org.opencastproject.workflow.api.WorkflowService;
 import org.opencastproject.workspace.api.Workspace;
 
-import com.entwinemedia.fn.Fn2;
-import com.entwinemedia.fn.Stream;
 import com.entwinemedia.fn.data.Opt;
 import com.google.common.net.MediaType;
 
@@ -168,6 +167,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 
@@ -196,9 +196,6 @@ public class IndexServiceImpl implements IndexService {
   private Pattern patternCatalog = Pattern.compile(catalogRegex);
   private Pattern patternTrack = Pattern.compile(trackRegex);
   private Pattern patternNumberedAsset = Pattern.compile(numberedAssetRegex);
-
-  private EventCatalogUIAdapter eventCatalogUIAdapter;
-  private SeriesCatalogUIAdapter seriesCatalogUIAdapter;
 
   private AclServiceFactory aclServiceFactory;
   private AuthorizationService authorizationService;
@@ -257,26 +254,6 @@ public class IndexServiceImpl implements IndexService {
    */
   public void setEventCommentService(EventCommentService eventCommentService) {
     this.eventCommentService = eventCommentService;
-  }
-
-  /**
-   * OSGi callback to add the event dublincore {@link EventCatalogUIAdapter} instance.
-   *
-   * @param eventCatalogUIAdapter
-   *          the adapter to set
-   */
-  public void setCommonEventCatalogUIAdapter(CommonEventCatalogUIAdapter eventCatalogUIAdapter) {
-    this.eventCatalogUIAdapter = eventCatalogUIAdapter;
-  }
-
-  /**
-   * OSGi callback to add the series dublincore {@link SeriesCatalogUIAdapter} instance.
-   *
-   * @param seriesCatalogUIAdapter
-   *          the adapter to set
-   */
-  public void setCommonSeriesCatalogUIAdapter(CommonSeriesCatalogUIAdapter seriesCatalogUIAdapter) {
-    this.seriesCatalogUIAdapter = seriesCatalogUIAdapter;
   }
 
   /**
@@ -417,22 +394,9 @@ public class IndexServiceImpl implements IndexService {
     return aclServiceFactory.serviceFor(securityService.getOrganization());
   }
 
-  private static final Fn2<EventCatalogUIAdapter, String, Boolean> eventOrganizationFilter = new Fn2<EventCatalogUIAdapter, String, Boolean>() {
-    @Override
-    public Boolean apply(EventCatalogUIAdapter catalogUIAdapter, String organization) {
-      return organization.equals(catalogUIAdapter.getOrganization());
-    }
-  };
-
-  private static final Fn2<SeriesCatalogUIAdapter, String, Boolean> seriesOrganizationFilter = new Fn2<SeriesCatalogUIAdapter, String, Boolean>() {
-    @Override
-    public Boolean apply(SeriesCatalogUIAdapter catalogUIAdapter, String organization) {
-      return catalogUIAdapter.getOrganization().equals(organization);
-    }
-  };
-
   public List<EventCatalogUIAdapter> getEventCatalogUIAdapters(String organization) {
-    return Stream.$(eventCatalogUIAdapters).filter(eventOrganizationFilter._2(organization)).toList();
+    return eventCatalogUIAdapters.stream().filter(a -> organization.equals(a.getOrganization()))
+            .collect(Collectors.toList());
   }
 
   /**
@@ -441,12 +405,52 @@ public class IndexServiceImpl implements IndexService {
    * @return A {@link List} of {@link SeriesCatalogUIAdapter} that provide the metadata to the front end.
    */
   public List<SeriesCatalogUIAdapter> getSeriesCatalogUIAdapters(String organization) {
-    return Stream.$(seriesCatalogUIAdapters).filter(seriesOrganizationFilter._2(organization)).toList();
+    return seriesCatalogUIAdapters.stream().filter(a -> organization.equals(a.getOrganization()))
+            .collect(Collectors.toList());
+  }
+
+  public EventCatalogUIAdapter getCommonEventCatalogUIAdapter(String organization) {
+    Optional<EventCatalogUIAdapter> orgEventCatalogUIAdapter = eventCatalogUIAdapters.stream()
+            .filter(a -> a instanceof CommonEventCatalogUIAdapter)
+            .filter(a -> organization.equals(a.getOrganization()))
+            .findFirst();
+
+    if (orgEventCatalogUIAdapter.isPresent()) {
+      return orgEventCatalogUIAdapter.get();
+    } else if (organization != DEFAULT_ORGANIZATION_ID) {
+      return getCommonEventCatalogUIAdapter(DEFAULT_ORGANIZATION_ID);
+    } else {
+       throw new IllegalStateException("Common event metadata for " + DEFAULT_ORGANIZATION_ID + " needs to be "
+               + "configured!");
+    }
+  }
+
+  public SeriesCatalogUIAdapter getCommonSeriesCatalogUIAdapter(String organization) {
+    Optional<SeriesCatalogUIAdapter> orgSeriesCatalogUIAdapter = seriesCatalogUIAdapters.stream()
+            .filter(a -> a instanceof CommonSeriesCatalogUIAdapter)
+            .filter(a -> organization.equals(a.getOrganization()))
+            .findFirst();
+
+    if (orgSeriesCatalogUIAdapter.isPresent()) {
+      return orgSeriesCatalogUIAdapter.get();
+    } else if (organization != DEFAULT_ORGANIZATION_ID) {
+      return getCommonSeriesCatalogUIAdapter(DEFAULT_ORGANIZATION_ID);
+    } else {
+      throw new IllegalStateException("Common series metadata for " + DEFAULT_ORGANIZATION_ID + " needs to be "
+              + "configured!");
+    }
   }
 
   @Override
   public List<EventCatalogUIAdapter> getEventCatalogUIAdapters() {
     return new ArrayList<>(getEventCatalogUIAdapters(securityService.getOrganization().getId()));
+  }
+
+  @Override
+  public List<EventCatalogUIAdapter> getExtendedEventCatalogUIAdapters() {
+    String organization = securityService.getOrganization().getId();
+    return eventCatalogUIAdapters.stream().filter(a -> !(a instanceof CommonEventCatalogUIAdapter))
+            .filter(a -> organization.equals(a.getOrganization())).collect(Collectors.toList());
   }
 
   @Override
@@ -456,12 +460,12 @@ public class IndexServiceImpl implements IndexService {
 
   @Override
   public EventCatalogUIAdapter getCommonEventCatalogUIAdapter() {
-    return eventCatalogUIAdapter;
+    return getCommonEventCatalogUIAdapter(securityService.getOrganization().getId());
   }
 
   @Override
   public SeriesCatalogUIAdapter getCommonSeriesCatalogUIAdapter() {
-    return seriesCatalogUIAdapter;
+    return getCommonSeriesCatalogUIAdapter(securityService.getOrganization().getId());
   }
 
   public void activate(ComponentContext cc) {
@@ -542,7 +546,7 @@ public class IndexServiceImpl implements IndexService {
               assetList.add(item.getFieldName());
               mp = ingestService.addTrack(item.openStream(), item.getName(),
                       new MediaPackageElementFlavor(item.getFieldName(), "*"), mp);
-              } else {
+            } else {
               logger.warn("Unknown field name found {}", item.getFieldName());
             }
           }
@@ -624,11 +628,15 @@ public class IndexServiceImpl implements IndexService {
             mp =  ingestService.addAttachment(item.openStream(), item.getName(),
                     new MediaPackageElementFlavor(item.getFieldName(), "*"), mp);
           } else if (item.getFieldName().toLowerCase().matches(catalogRegex)) {
-
             assetList.add(item.getFieldName());
             // Add catalog with field name as temporary flavor
-            mp =  ingestService.addCatalog(item.openStream(), item.getName(),
-                    new MediaPackageElementFlavor(item.getFieldName(), "*"), mp);
+            mp = ingestService.addCatalog(item.openStream(), item.getName(),
+                new MediaPackageElementFlavor(item.getFieldName(), "*"), mp);
+          } else if (item.getFieldName().toLowerCase().matches(trackRegex)) {
+            // Cannot get flavor at this point, so saving with temporary flavor
+            assetList.add(item.getFieldName());
+            mp = ingestService.addTrack(item.openStream(), item.getName(),
+                new MediaPackageElementFlavor(item.getFieldName(), "*"), mp);
           } else {
             logger.warn("Unknown field name found {}", item.getFieldName());
           }
@@ -847,7 +855,7 @@ public class IndexServiceImpl implements IndexService {
     SourceType type = getSourceType(eventHttpServletRequest.getSource().get());
 
     DublinCoreMetadataCollection eventMetadata = eventHttpServletRequest.getMetadataList().get()
-            .getMetadataByAdapter(eventCatalogUIAdapter);
+            .getMetadataByAdapter(getCommonEventCatalogUIAdapter());
 
     Date currentStartDate = null;
     JSONObject sourceMetadata = (JSONObject) eventHttpServletRequest.getSource().get().get("metadata");
@@ -900,7 +908,7 @@ public class IndexServiceImpl implements IndexService {
       presenterUsernames = technicalPresenters.get();
     }
 
-    eventHttpServletRequest.getMetadataList().get().add(eventCatalogUIAdapter, eventMetadata);
+    eventHttpServletRequest.getMetadataList().get().add(getCommonEventCatalogUIAdapter(), eventMetadata);
     updateMediaPackageMetadata(eventHttpServletRequest.getMediaPackage().get(),
             eventHttpServletRequest.getMetadataList().get());
 
@@ -1156,8 +1164,14 @@ public class IndexServiceImpl implements IndexService {
             catArray[0].setFlavor(newElemflavor);
             logger.info("Update asset {} {}", type, newElemflavor);
           } else if (patternTrack.matcher(type).matches()) {
-            // Overwriting of existing tracks of same flavor is currently not allowed.
-            // TODO: allow overwriting of existing tracks of same flavor
+            if (overwriteExisting) {
+              // remove existing catalogs of the new flavor
+              Track[] existing = mp.getTracks(newElemflavor);
+              for (int i = 0; i < existing.length; i++) {
+                mp.remove(existing[i]);
+                logger.info("Overwriting existing asset {} {}", type, newElemflavor);
+              }
+            }
             Track[]  trackArray = mp.getTracks(new MediaPackageElementFlavor(assetOrig, "*"));
             if (trackArray.length > 1) {
               throw new IllegalArgumentException("More than one " + asset + " found, only one expected.");
@@ -2009,17 +2023,6 @@ public class IndexServiceImpl implements IndexService {
   }
 
   /**
-   * @return A {@link MetadataList} with only the common SeriesCatalogUIAdapter's empty {@link DublinCoreMetadataCollection}
-   *         available
-   */
-  private MetadataList getMetadataListWithCommonSeriesCatalogUIAdapters() {
-    MetadataList metadataList = new MetadataList();
-    metadataList.add(seriesCatalogUIAdapter.getFlavor().toString(), seriesCatalogUIAdapter.getUITitle(),
-            seriesCatalogUIAdapter.getRawFields());
-    return metadataList;
-  }
-
-  /**
    * @return A {@link MetadataList} with all of the available CatalogUIAdapters empty {@link DublinCoreMetadataCollection}
    *         available
    */
@@ -2029,12 +2032,6 @@ public class IndexServiceImpl implements IndexService {
     for (SeriesCatalogUIAdapter adapter : getSeriesCatalogUIAdapters()) {
       metadataList.add(adapter.getFlavor().toString(), adapter.getUITitle(), adapter.getRawFields());
     }
-    return metadataList;
-  }
-
-  private MetadataList getMetadataListWithCommonEventCatalogUIAdapter() {
-    MetadataList metadataList = new MetadataList();
-    metadataList.add(eventCatalogUIAdapter, eventCatalogUIAdapter.getRawFields());
     return metadataList;
   }
 
